--- a/koji/docker_factory_parameters_example.config
+++ b/koji/docker_factory_parameters_example.config
@@ -18,7 +18,7 @@ kickstart = centos.ks
 
 # These are entirely bogus parameters
 [factory-parameters]
-docker_cmd = [ '/bin/bash' ]
-docker_env = [ 'PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin', 'FOO=BAR' ]
-docker_label = { 'foo':'bar', 'do':'oh', 'License': u'GPLv2', 'RUN': 'docker run -it --rm ${OPT1} --privileged -v `pwd`:/atomicapp -v /run:/run -v /:/host --net=host --name ${NAME} -e NAME=${NAME} -e IMAGE=${IMAGE} ${IMAGE} -v ${OPT2} run ${OPT3} /atomicapp', 'Vendor': 'CentOS' }
+docker_cmd = [ "/bin/bash" ]
+docker_env = [ "PATH=/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin", "FOO=BAR" ]
+docker_label = { "foo":"bar", "do":"oh", "License":"GPLv2", "RUN": "docker run -it --rm ${OPT1} --privileged -v `pwd`:/atomicapp -v /run:/run -v /:/host --net=host --name ${NAME} -e NAME=${NAME} -e IMAGE=${IMAGE} ${IMAGE} -v ${OPT2} run ${OPT3} /atomicapp", "Vendor": "CentOS" }
 
